# Gradient-parser

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
lib/: CMakeLists.txt  GradientParser.cpp  Image.cpp
lib/includes/: GradientParser.hpp  Image.hpp
